chnaged from toList to collectors.tolist in similarity service impl